Files can now be downloaded/updloaded from employer client.
