# src/main/java/p7gruppe/p7/offloading/api/JobsApiController.java
@@ -1,23 +1,21 @@
 package p7gruppe.p7.offloading.api;
 
+import org.apache.tomcat.util.codec.binary.Base64;
+import org.aspectj.util.FileUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.InputStreamResource;
-import org.springframework.core.io.Resource;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.multipart.MultipartFile;
+import p7gruppe.p7.offloading.converters.FileStringConverter;
 import p7gruppe.p7.offloading.data.enitity.JobEntity;
 import p7gruppe.p7.offloading.data.enitity.UserEntity;
 import p7gruppe.p7.offloading.data.local.JobFileManager;
 import p7gruppe.p7.offloading.data.repository.JobRepository;
 import p7gruppe.p7.offloading.data.repository.UserRepository;
-import p7gruppe.p7.offloading.model.InlineObject;
 import p7gruppe.p7.offloading.model.Job;
 import p7gruppe.p7.offloading.model.UserCredentials;
 import p7gruppe.p7.offloading.scheduling.JobScheduler;
@@ -25,8 +23,6 @@ import p7gruppe.p7.offloading.scheduling.JobScheduler;
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
@@ -55,21 +51,20 @@ public class JobsApiController implements JobsApi {
 
     }
 
-
     @Override
-    public ResponseEntity<Void> postJob(UserCredentials userCredentials, @NotNull @Valid Integer requestedWorkers, @Valid MultipartFile jobfile) {
+    public ResponseEntity<Void> postJob(UserCredentials userCredentials, @NotNull @Valid Integer requestedWorkers, @NotNull @Valid String jobname, @Valid byte[] body) {
         System.out.println("Posting job....");
         if (!userRepository.isPasswordCorrect(userCredentials.getUsername(), userCredentials.getPassword())) {
             return ResponseEntity.badRequest().build();
         }
 
         try {
-            System.out.println("Trying to save job...");
-            String path = JobFileManager.saveJob(userCredentials.getUsername(), jobfile);
+            byte[] decoded = JobFileManager.decodeJobByte64(body);
+            String path = JobFileManager.saveJob(userCredentials.getUsername(), decoded);
             System.out.println("Job saved...");
             UserEntity userEntity = userRepository.getUserByUsername(userCredentials.getUsername());
             System.out.println("Username pulled");
-            JobEntity jobEntity = jobRepository.save(new JobEntity(userEntity, path, jobfile.getOriginalFilename(), requestedWorkers));
+            JobEntity jobEntity = jobRepository.save(new JobEntity(userEntity, path, jobname, requestedWorkers));
             System.out.println("Job entity saved...");
             return ResponseEntity.ok().build();
         } catch (IOException e) {
@@ -98,8 +93,10 @@ public class JobsApiController implements JobsApi {
         return ResponseEntity.status(200).build();
     }
 
+
+
     @Override
-    public ResponseEntity<Resource> getJobFiles(Long jobId, UserCredentials userCredentials) {
+    public ResponseEntity<byte[]> getJobFiles(Long jobId, UserCredentials userCredentials) {
         // First check password
         if (!userRepository.isPasswordCorrect(userCredentials.getUsername(), userCredentials.getPassword())) {
             return ResponseEntity.badRequest().build();
@@ -112,21 +109,16 @@ public class JobsApiController implements JobsApi {
         // If some job is available for computation
         File file = JobFileManager.getJobFile(job.get().jobPath);
         InputStreamResource resource = null;
-        try {
-            resource = new InputStreamResource(new FileInputStream(file));
-            return ResponseEntity.ok()
-                    .headers(new HttpHeaders())
-                    .contentLength(file.length())
-                    .contentType(MediaType.APPLICATION_OCTET_STREAM)
-                    .body(resource);
-        } catch (FileNotFoundException e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+        return ResponseEntity.ok()
+                .headers(new HttpHeaders())
+                .contentLength(file.length())
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(FileStringConverter.fileToBytes(file));
 
     }
 
     @Override
-    public ResponseEntity<Resource> getJobResult(Long jobId, UserCredentials userCredentials) {
+    public ResponseEntity<byte[]> getJobResult(Long jobId, UserCredentials userCredentials) {
         if (!userRepository.isPasswordCorrect(userCredentials.getUsername(), userCredentials.getPassword())) {
             return ResponseEntity.badRequest().build();
         }
