# src/main/resources/openapi-definition.yaml
@@ -1,4 +1,4 @@
-openapi: "3.0.0"
+openapi: "3.0.3"
 info:
   description: "Semester project for 7th semester at Aalborg University"
   version: "1.0.0"
@@ -40,10 +40,10 @@ components:
     Assignment:
       type: object
       properties:
-        job_id:
+        jobid:
           type: integer
           format: int64
-        file:
+        jobfile:
           type: string
           format: byte
 
@@ -154,16 +154,19 @@ paths:
           schema:
             type: integer
             format: int32
+        - name: jobname
+          required: true
+          in: query
+          schema:
+            type: string
 
       requestBody:
+        required: true
         content:
-          multipart/form-data:
+          application/json:
             schema:
-              type: object
-              properties:
-                file:
-                  type: string
-                  format: binary
+              type: string
+              format: byte
       responses:
         '200':
           description: Computed job
@@ -238,11 +241,11 @@ paths:
         '200':
           description: Found the job result
           content:
-            multipart/form-data:
+            application/json:
               schema:
                 title: fileID
                 type: string
-                format: binary
+                format: byte
 
         '202':
           description: Could not find job
@@ -270,13 +273,12 @@ paths:
 
       responses:
         '200':
-          description: Found the job result
+          description: Found the job files
           content:
-            multipart/form-data:
+            application/json:
               schema:
-                title: fileID
                 type: string
-                format: binary
+                format: byte
 
         '202':
           description: Could not find job
@@ -323,13 +325,14 @@ paths:
 
       requestBody:
         content:
-          multipart/form-data:
+          application/json:
             schema:
+              title: jobresult
               type: object
               properties:
                 result:
                   type: string
-                  format: binary
+                  format: byte
 
       parameters:
         - name: userCredentials
